# constantPP-KNNv2

./: CMakeLists.txt  Fig3_OfflineCost_Summary.txt  Fig4_LatencyResult_Summary.txt  README.md  TableV_Accuracy_Summary.txt  draw_fig3fig4.py  fig3_offline_cost_summary.py  fig4_latency_result_summary.py  main.cpp  run_ours.sh  run_results_summary.sh  tableV_accuracy_summary.py
comparison schemes/scheme [11](Liu)/: README.md  pom.xml
comparison schemes/scheme [12](Li)/: README.md  dataprocessing.py  secKNN.py
comparison schemes/scheme [13](Xie)/: README.md
dataset/real/: Breast Cancer.csv  Car Evaluation.csv  Chronic Kidney Disease.csv  Iris.csv  Toxicity.csv  Wine.csv
dataset/synthetic/: test100-20.csv  test100-40.csv  test100-60.csv  test100-80.csv  test200-20.csv  test200-40.csv  test200-60.csv  test200-80.csv  (+12 more)
evalResult/: Fig.3a_offline_cost(parallel).txt  Fig.3a_offline_cost(sequential).txt  Fig.3b_offline_cost(parallel).txt  Fig.3b_offline_cost(sequential).txt  Fig.4a_latency_result_ours(parallel).txt  Fig.4a_latency_result_ours(sequential).txt  Fig.4b_latency_result_ours(parallel).txt  Fig.4b_latency_result_ours(sequential).txt  tableV_accuracy_result_ours.txt  tableV_accuracy_result_ours_parallel.txt  tableV_accuracy_result_ours_sequential.txt  tableV_accuracy_result_plaintext baseline.txt
include/: dataset.h  secknn.h  util.h
libfss/cpp/: CMakeLists.txt  fss-client.cpp  fss-client.h  fss-common.h  fss-server.cpp  fss-server.h  fss-test.cpp
src/: aes_bridge.cpp  dataShare.cpp  genTriple.cpp  secBGtCom.cpp  secBLtCom.cpp  secED.cpp  secEqTest.cpp  secFre.cpp  secKMin.cpp  secMax.cpp  secMul.cpp  secShuffle.cpp  testAccFunction.cpp  testLatenFunction.cpp  testOfflineCost.cpp  typeConvert.cpp  util.cpp
(+51 files in other folders)
